Atualizar o ex004.html

--- a/Aula06/ex004.html
+++ b/Aula06/ex004.html
@@ -20,7 +20,7 @@
         var nome = window.prompt('Qual é seu nome?')
         document.write(`Olá, <strong>${nome}</strong>! Seu nome tem ${nome.length} letras.`)
         document.write(`Seu nome em maiúsculas é ${nome.toUpperCase()}`)
-        document.write(`Seu nome em minúsculas é ${nome.toLoweCase()}`)
+        document.write(`Seu nome em minúsculas é ${nome.toLowerCase()}`)
 
     </script>
 
